[package]
name = "profidev-io-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.77"
chrono = "0.4.34"
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = "1.0.196"
surf = "2.3.2"
tide = "0.16.0"
