[package]
name = "profidev-io-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.77"
chrono = "0.4.34"
dotenv = "0.15.0"
flate2 = "1.0.28"
lazy_static = "1.4.0"
percent-encoding = "2.3.1"
rand = "0.8.5"
serde = "1.0.196"
surf = "2.3.2"
tide = "0.16.0"
zip = "0.6.6"
